# Information-Measure-Decision-Tree-Classifier

./: CMakeLists.txt  README.md
data/: training_data.csv
include/: data_ingestion.h  utils.h
src/: data_ingestion.cpp  decision_tree.cpp  main.cpp  utils.cpp
